[package]
name = "kvsmdp"
description = "Meter Data Processing Utility"
authors = ["Maxwell French <mfrench@watertown-ny.gov>"]
repository = "https://github.com/watertowndev/kvsmdp"
license = "BSD-3"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffreader = { git="https://github.com/maxwell-fr/ffreader.git", tag="0.1.1" }
clap = { version="4.5.2", features=["cargo"]}
chrono = "0.4.35"

[build-dependencies]
winresource = "0.1.17"


[package.metadata.winresource]
OriginalFilename = "kvsmdp.exe"
LegalCopyright = "Copyright © 2024 Maxwell French"
FileDescription = "Meter Data Processing Utility"